<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:id="@+id/drawer"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    >

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_240"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"

        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toTopOf="@+id/chart_g4"
        app:layout_constraintEnd_toStartOf="@+id/chart_g2"
        app:layout_constraintStart_toStartOf="@+id/chart_g1"
        app:layout_constraintTop_toTopOf="@+id/chart_g3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bolt"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        app:layout_constraintBottom_toTopOf="@+id/chart_g5"
        app:layout_constraintEnd_toStartOf="@+id/chart_g2"
        app:layout_constraintStart_toStartOf="@+id/chart_g1"
        app:srcCompat="@drawable/bolt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintEnd_toStartOf="@+id/chart_g2"
        app:layout_constraintStart_toStartOf="@+id/chart_g1"
        app:layout_constraintTop_toTopOf="@+id/chart_g5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/menu"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dp_12"
        app:srcCompat="@drawable/menu_white" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/chart_g5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />
















   <!-- /////////////////////////////////////////////////////////-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_guid"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_your_battery_state"
            android:textColor="@color/low_orange"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/g1"
            app:layout_constraintEnd_toStartOf="@+id/g4"
            app:layout_constraintStart_toStartOf="@+id/g6"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img1"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintBottom_toTopOf="@+id/g2"
            app:layout_constraintStart_toStartOf="@+id/g6"
            app:layout_constraintTop_toTopOf="@+id/g1"
            app:srcCompat="@drawable/volt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/voltage"
            android:textColor="@color/low_gray"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toTopOf="@+id/img1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img1"
            app:layout_constraintStart_toEndOf="@+id/img1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img2"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintBottom_toTopOf="@+id/g3"
            app:layout_constraintStart_toStartOf="@+id/g6"
            app:layout_constraintTop_toTopOf="@+id/g2"
            app:srcCompat="@drawable/plug" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/plugged"
            android:textColor="@color/low_gray"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toEndOf="@+id/img2"
            app:layout_constraintTop_toTopOf="@+id/img2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_plug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img2"
            app:layout_constraintStart_toEndOf="@+id/img2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img3"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintBottom_toTopOf="@+id/g2"
            app:layout_constraintStart_toStartOf="@+id/g5"
            app:layout_constraintTop_toTopOf="@+id/g1"
            app:srcCompat="@drawable/lighting" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/technology"
            android:textColor="@color/low_gray"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toEndOf="@+id/img3"
            app:layout_constraintTop_toTopOf="@+id/img3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            androidtext="50"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img3"
            app:layout_constraintStart_toEndOf="@+id/img3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img4"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            app:layout_constraintBottom_toTopOf="@+id/g3"
            app:layout_constraintStart_toStartOf="@+id/g5"
            app:layout_constraintTop_toTopOf="@+id/g2"
            app:srcCompat="@drawable/celsius" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/temperature"
            android:textColor="@color/low_gray"
            android:textSize="@dimen/sp_18"
            app:layout_constraintStart_toEndOf="@+id/img4"
            app:layout_constraintTop_toTopOf="@+id/img4" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:id="@+id/txt_temp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img4"
            app:layout_constraintStart_toEndOf="@+id/img4" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line"
            app:layout_constraintBottom_toTopOf="@+id/g1"
            app:layout_constraintEnd_toStartOf="@+id/g4"
            app:layout_constraintStart_toStartOf="@+id/g6" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line"
            android:layout_marginEnd="@dimen/dp_12"
            app:layout_constraintBottom_toTopOf="@+id/g2"
            app:layout_constraintEnd_toStartOf="@+id/g5"
            app:layout_constraintStart_toStartOf="@+id/g6" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/line"
            android:layout_marginStart="@dimen/dp_12"
            app:layout_constraintBottom_toTopOf="@+id/g2"
            app:layout_constraintEnd_toStartOf="@+id/g4"
            app:layout_constraintStart_toStartOf="@+id/g5" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:background="@drawable/bg_health"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/g3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_health"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_battery_heath"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dead" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_battery_heath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/img_health"
                android:textSize="12sp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/img_health"
                app:layout_constraintTop_toTopOf="@+id/img_health" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        >
        <include
            android:id="@+id/ic_layout"
            layout="@layout/nav_layout"
            />

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>